--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.2",
     "react-router-dom": "^6.4.4",
     "styled-components": "^5.3.6"
   },
