--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.2",
     "react-router-dom": "^6.4.4",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
